--- a/projects/angularstudio-forgot-password/src/lib/angularstudio-forgot-password.component.html
+++ b/projects/angularstudio-forgot-password/src/lib/angularstudio-forgot-password.component.html
@@ -24,7 +24,7 @@
 
             <clr-input-container>
 
-                <label>Current Password</label>
+                <label>Email</label>
 
                 <input placeholder="Email Address"
                        formControlName="email"
