--- a/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.html
+++ b/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.html
@@ -22,7 +22,7 @@
               clrLabelSize="4"
               clrForm>
 
-            <clr-password-container>
+            <clr-password-container *ngIf="changePasswordService.config.showCurrent">
 
                 <label>Current Password</label>
 
